# VibeBot

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  install.sh  pyproject.toml  pytest.ini  requirements.txt
docs/plans/: 2026-03-28-vibebot-design.md  2026-03-28-vibebot-implementation.md
docs/slides/: presentation.html
src/: asr_client.py  audio.py  bot.py  llm_client.py  service_manager.py  tts_client.py  voice_pipeline.py
src/cogs/: admin.py  music.py  voice.py
tests/: test_admin_cog.py  test_asr_client.py  test_audio.py  test_bot.py  test_e2e_real.py  test_integration.py  test_llm_client.py  test_music_cog.py  test_service_manager.py  test_tts_client.py  test_voice_cog.py  test_voice_pipeline.py
