[project]
name = "vibebot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "discord.py[voice]>=2.7.0",
    "httpx>=0.24.0",
    "websockets>=12.0",
    "webrtcvad-wheels>=2.0.14",
    "numpy>=1.24.0",
    "yt-dlp>=2024.0",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
